# trends-microservice

./: README.md  pyproject.toml  wsgi.py
trends_microservice/: app.py
trends_microservice/src/: timeline.py
