[tool.poetry]
name = "trends-microservice"
version = "0.1.0"
description = ""
authors = ["ramosaj1 <tony@finmango.org>"]
readme = "README.md"
packages = [{include = "trends_microservice"}, {include="trends_microservice.src"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
google-api-python-client = "^2.154.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
